# simple-rust-uploader

./: .ignore  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  build.rs  docker-compose-dev.yml  docker-compose.yml
src/: get_index.rs  links.c  links.rs  main.rs  upload_image.rs
testpage/: index.html  script.js
